--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<module>umlet-elements</module>
 		<module>umlet-res</module>
 <!--		<module>umlet-swing</module>-->
-		<module>umlet-standalone</module>
+<!--		<module>umlet-standalone</module>-->
 		<module>umlet-eclipse-plugin-deps</module>
 		<module>umlet-eclipse-plugin</module>
 		<module>umlet-eclipse-feature</module>
